# mdcrawler

./: .gitignore  AGENTS.md  README.md  prompt.txt  pyproject.toml  test-websites.md
mirror/: canonical_tags_canonical_duplicate_description.md  canonical_tags_canonical_tag_10.md  canonical_tags_canonical_tag_7.md  canonical_tags_canonical_tag_in_header.md  canonical_tags_canonical_tag_like_page.md  catalogue_category_books_1_index_html.md  catalogue_category_books_suspense_44_index_html.md  content_header_content_type_malformed.md  content_word_count_number.md  content_word_count_script.md  content_word_count_symbols.md  encoding_inconsistent_character_encoding.md  encoding_url_encoded_hashbang_23abc.md  encoding_url_with_foreign_characters_D7_91_D7_9C_D7_94_D7_91_D7_9C_D7_94.md  index.md  javascript_analytics_script.md  javascript_onload-inserted-canonical.md  javascript_window-location-onclick.md  links_page_with_external_links.md  mobile_amp_with_responsive.md  mobile_desktop_with_AMP_as_mobile.md  mobile_no_mobile_configuration.md  mobile_other_desktop_that_links_to_the_same_mobile_pages.md  mobile_separate_desktop_with_different_h1.md  mobile_separate_desktop_with_different_links_out.md  other_script_tag_contents.md  other_string_width_512_string.md  redirects_infinite_meta_redirect.md  redirects_meta_redirect_1.md  redirects_redirect_2.md  redirects_redirect_308.md  relative_base_source.md  robots_protocol_multiple_googlebot_directive_meta_tag.md  robots_protocol_robots_excluded_blank_line.md  robots_protocol_robots_meta_noodp_noydir_none_noindex.md  (+18 more)
(+4 files in other folders)
